--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<a class="nav-link" href="#features">Features</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#contact">Contact</a>
+						<a class="nav-link" href="https://sagorpstu.github.io/portfolio" target="_blank">Hire Me</a>
 					</li>
 					
 				</ul>
